# didwebvh-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  STATUS.md
.github/workflows/: ci.yml  fuzz.yml
benches/: did_benchmarks.rs  did_benchmarks_nightly.rs
didwebvh-provision/: Cargo.toml
didwebvh-resolver/: Cargo.toml  README.md
didwebvh-resolver/src/: error.rs  lib.rs
didwebvh-resolver/src/crypto/: mod.rs
didwebvh-resolver/src/http/: mod.rs
didwebvh-resolver/src/log/: mod.rs
didwebvh-resolver/src/resolver/: mod.rs
didwebvh-resolver/src/types/: mod.rs
didwebvh-resolver/src/url/: mod.rs
didwebvh-resolver/src/utils/: mod.rs
examples/: create.rs  custom_signer.rs  deactivate_did.rs  fuzz_validate.rs  generate_history.rs  generate_large_did.rs  resolve.rs  rotate_keys.rs  update_did.rs
examples/common/: suite.rs
examples/wizard/: did_scid.rs  did_web.rs  main.rs  resolve.rs  witness.rs
examples/wizard/updating/: authorization.rs  mod.rs  portable.rs  revoke.rs  watchers.rs  witness.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: chain_validate.rs  logentry_deserialize.rs  parameters_validate.rs  proof_verify.rs
specs/: v0.5.1-spec-compliance.md
src/: arbitrary_impls.rs  arbitrary_support.rs  cli_common.rs  cli_create.rs  cli_update.rs  create.rs  did_key.rs  did_web.rs  lib.rs  multibase_type.rs  prelude.rs  test_utils.rs  update.rs  url.rs  validate.rs
src/log_entry/: mod.rs  read.rs  spec_1_0.rs  spec_1_0_pre.rs
src/log_entry_state/: mod.rs
src/parameters/: mod.rs  spec_1_0.rs  spec_1_0_pre.rs
src/resolve/: implicit.rs  mod.rs  ssi_resolve.rs
src/witness/: mod.rs  proofs.rs  validate.rs
tests/: cli_modules.rs  experimental_pqc.rs  first_log_entry.rs  generate_history.rs  invalid_ported.rs  plain_rotation_issue_35.rs  property_tests.rs  revoked.rs  test_suite_interop.rs  update_did.rs
tests/common/: mod.rs
tests/fixtures/plain-rotation/: generate.mjs  package.json
tests/test_vectors/: did-generate_history.jsonl  did-witness-generate_history.json  first_log_entry_good.jsonl  first_log_entry_verify_full.jsonl  first_log_entry_verify_tampered.jsonl  invalid-ported.jsonl  plain_rotation_no_prerotation.jsonl  revoked-did.jsonl
tests/test_vectors/test_suite/: README.md
