[package]
name = "didwebvh-rs"
version = "0.4.2"
description = "Implementation of the did:webvh method in Rust"
repository = "https://github.com/decentralized-identity/didwebvh-rs"
edition = "2024"
authors = ["Glenn Gore <glenn@affinidi.com>"]
homepage = "https://didwebvh.info/"
categories = ["authentication", "cryptography", "web-programming"]
keywords = ["ssi", "did", "webvh", "verifiable"]
publish = true
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.94.0"

[features]
default = ["network"]
ssi = ["dep:ssi", "network"]
network = ["dep:reqwest"]
rustls = ["network", "reqwest/rustls"]
native-tls = ["network", "reqwest/native-tls"]
cli = ["dep:dialoguer", "dep:console"]
# Experimental post-quantum cryptosuites (ML-DSA-44, SLH-DSA-128).
# Not yet in the didwebvh 1.0 spec; meant for interop testing with other
# PQC-aware implementations.
#
# TEMPORARILY DISABLED: affinidi-secrets-resolver@0.5.5 with the `ml-dsa`
# feature fails to compile — it imports `ML_DSA_*` and `SLH_DSA_*_PUB`
# constants from its own `multicodec` module that aren't exported there.
# Re-enable the forward once upstream ships a fix. The runtime
# `WitnessVerifyOptions::extra_allowed_suites` escape hatch (see task #15)
# lets consumers opt into additional suites without needing this feature.
experimental-pqc = []

[dependencies]
affinidi-data-integrity = { version = "0.5" }
affinidi-did-common = "0.3"
affinidi-secrets-resolver = "0.5"

ahash = { version = "0.8", features = ["serde"] }
async-trait = "0.1"
base58 = "0.2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", optional = true }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_json_canonicalizer = "0.3"
serde_with = "3.18"
sha2 = "0.11"
ssi = { version = "0.15", features = ["secp384r1"], optional = true }
thiserror = "2.0"
tokio = { version = "1.50" }
tracing = { version = "0.1" }
url = "2.5"
getrandom = { version = "0.4", features = ["wasm_js"] }

# Optional dependencies for `cli` feature (interactive DID creation flow)
console = { version = "0.16", optional = true }
dialoguer = { version = "0.12", optional = true }

[dev-dependencies]
anyhow = "1.0"
byte-unit = "5.2"
clap = { version = "4.6", features = ["derive"] }
console = "0.16"
dialoguer = "0.12"
format_num = "0.1.0"
rand = "0.10"
criterion = { version = "0.8", features = ["async_tokio"] }
proptest = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
  "valuable",
] }

[[example]]
name = "resolve"
required-features = ["network"]

[[example]]
name = "wizard"
required-features = ["network", "cli"]

[[example]]
name = "generate_history"
required-features = ["network"]

[[example]]
name = "generate_large_did"
required-features = ["network"]

[[bench]]
name = "did_benchmarks"
harness = false

[[bench]]
name = "did_benchmarks_nightly"
