[package]
name = "didwebvh-rs"
version = "0.5.0"
description = "Implementation of the did:webvh method in Rust"
repository = "https://github.com/decentralized-identity/didwebvh-rs"
edition = "2024"
authors = ["Glenn Gore <glenn@affinidi.com>"]
homepage = "https://didwebvh.info/"
categories = ["authentication", "cryptography", "web-programming"]
keywords = ["ssi", "did", "webvh", "verifiable"]
publish = true
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.94.0"

[features]
default = ["network"]
ssi = ["dep:ssi", "network"]
network = ["dep:reqwest"]
rustls = ["network", "reqwest/rustls"]
native-tls = ["network", "reqwest/native-tls"]
cli = ["dep:dialoguer", "dep:console"]
# Experimental post-quantum cryptosuites (ML-DSA-{44,65,87}, SLH-DSA-128).
# Not yet in the didwebvh 1.0 spec — enable only for interop testing with
# other PQC-aware implementations. See README "Experimental PQC support"
# for a worked example.
#
# Runtime companion: `WitnessVerifyOptions::extra_allowed_suites` widens
# the accepted witness cryptosuite set at runtime without rebuilding,
# useful when a consumer wants PQC on the resolve path but doesn't want
# to ship a PQC-generating build.
experimental-pqc = [
    "affinidi-data-integrity/post-quantum",
    "affinidi-secrets-resolver/post-quantum",
]

[dependencies]
affinidi-data-integrity = { version = "0.5" }
affinidi-did-common = "0.3"
affinidi-secrets-resolver = "0.5"

ahash = { version = "0.8", features = ["serde"] }
async-trait = "0.1"
base58 = "0.2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", optional = true }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_json_canonicalizer = "0.3"
serde_with = "3.18"
sha2 = "0.11"
ssi = { version = "0.16", features = ["secp384r1"], optional = true }
thiserror = "2.0"
tokio = { version = "1.50" }
tracing = { version = "0.1" }
url = "2.5"
getrandom = { version = "0.4", features = ["wasm_js"] }

# Optional dependencies for `cli` feature (interactive DID creation flow)
console = { version = "0.16", optional = true }
dialoguer = { version = "0.12", optional = true }

[dev-dependencies]
anyhow = "1.0"
byte-unit = "5.2"
clap = { version = "4.6", features = ["derive"] }
console = "0.16"
dialoguer = "0.12"
format_num = "0.1.0"
rand = "0.10"
criterion = { version = "0.8", features = ["async_tokio"] }
proptest = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
  "valuable",
] }

[[example]]
name = "resolve"
required-features = ["network"]

[[example]]
name = "wizard"
required-features = ["network", "cli"]

[[example]]
name = "generate_history"
required-features = ["network"]

[[example]]
name = "generate_large_did"
required-features = ["network"]

[lints.rust]
# Default lints become errors in CI via `cargo clippy -- -D warnings`.
# Local builds still see them as warnings so iteration stays tight.
warnings = "warn"

[lints.clippy]
# Pedantic is available as opt-in for local development:
#
#     cargo clippy --all-features --all-targets -- -W clippy::pedantic
#
# but NOT gated in CI yet. 116 residual pedantic warnings against the
# 0.5.0 codebase — tracked in the `0.5.x-polish` issue for mechanical
# cleanup. Promoting to `warn` (+ `-D warnings` in CI) is a planned
# follow-up once that backlog clears. Keeping the allowlist here so
# the promotion is a one-line change when ready.
#
# Allowlist below will apply the moment pedantic flips to `warn`.
module_name_repetitions = "allow"  # `log_entry::LogEntry`, `parameters::Parameters` etc.
must_use_candidate = "allow"       # Every pure fn gets flagged; not worth it.
missing_errors_doc = "allow"       # Valuable but requires broad docstring churn.
missing_panics_doc = "allow"       # Same.
similar_names = "allow"            # `proof` vs `proofs`, `params` vs `parameters`.
too_many_lines = "allow"           # Opinionated.
cast_possible_truncation = "allow" # Usually intentional (u32 -> usize etc.).
cast_sign_loss = "allow"           # Usually intentional.
cast_precision_loss = "allow"      # Usually intentional.
doc_markdown = "allow"             # 150+ false positives across docstrings.
return_self_not_must_use = "allow" # Noisy on the builder pattern.
option_option = "allow"            # Tri-state `Option<Arc<Vec<T>>>` is intentional in Parameters.

[[bench]]
name = "did_benchmarks"
harness = false

[[bench]]
name = "did_benchmarks_nightly"
