[package]
name = "didwebvh-resolver"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the did:webvh DID method resolver"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/didwebvh-rs"
readme = "README.md"
keywords = ["did", "webvh", "resolver", "verifiable", "credentials"]
categories = ["cryptography", "authentication"]

[dependencies]
# Core functionality
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
url = "2.4"
async-trait = "0.1"
percent-encoding = "2.1"
# HTTP client
reqwest = { version = "0.12.14", features = ["json"] }

# Cryptographic dependencies
sha2 = "0.10"
base58 = "0.2"
multihash = "0.19.3"
ed25519-dalek = "2.0"
serde_json_canonicalizer = "0.3.0"  # For JCS (JSON Canonicalization Scheme)
# Async runtime
tokio = { version = "1.30", features = ["rt", "macros"] }

[dev-dependencies]
tokio = { version = "1.30", features = ["rt", "macros", "rt-multi-thread"] }
mockall = "0.13.1"
wiremock = "0.6.3"